--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-<div class="card">
-    <img src="{% static 'img/logo.png' %}" alt="ChamranLogo">
+<div class="card login-card">
+    <img class="registration-card-icon" src="{% static 'img/logo.png' %}" alt="ChamranLogo">
     <p class="ChamranTeam">چمران تیم</p>
     <div class="login-div">
         <form method="post" novalidate>
