--- a/templates/registration/user_pass.html
+++ b/templates/registration/user_pass.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <div class="card">
-    <img src="{% static 'img/logo.png' %}" alt="ChamranLogo">
-    <p class="ChamranTeam">چمران تیم</p>
+    <img class="registration-card-icon" src="{% static 'img/logo.png' %}" alt="ChamranLogo">
+    <p class="ChamranTeam">ثبت نام کاربری و رمز عبور</p>
     <div class="username">
         <label for="username">نام کاربری</label>
         <input type="text" id="username" name="username" value="">
@@ -26,7 +26,7 @@
     </div>
     <div class="confirm_password">
         <label for="confirm_password">تایید رمز عبور</label>
-        <input type="password" id="confirm_password" name="confirm_password" value="">
+        <input type="password" id="confirm_password" name="confirm_password" value="" autocomplete="off">
         <i class="fas fa-check fa-lg"></i>
     </div>
     <button type="button" name="enter" class="Enter-btn">ثبت اطلاعات</button>
