fix user top-bar dropdown

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -22,19 +22,16 @@
 <div class="main {% if request.user.expertuser.status == "signed_up" %} blur-div {% endif %}">
     <div class="top-bar">
         <img src="{% static 'expert/img/logoName.png' %}" alt="chamranTeam">
-        <div class="top-msg">
-            <span class="fas fa-envelope fa-lg"></span>
-        </div>
         <div class="dropdown">
             <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
                 <img src="{{ request.user.expertuser.expertform.photo.url }}" alt="profile" class="dropdown-img profile"
                      height="45px">
             </button>
             <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
-                <li><a href="{% url 'expert:userInfo' %}">اطلاعات کاربری</a></li>
-                <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور</a></li>
-                <li class="divider"></li>
-                <li><a href="{% url 'chamran:logout' %}">خروج</a></li>
+              <li><a href="{% url 'expert:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
+              <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
+              <li class="divider"></li>
+              <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
             </ul>
         </div>
     </div>
