--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -12,24 +12,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/skin-awesome/ui.fancytree.min.css">
       {% block header %}{% endblock %}
       <link rel="stylesheet" href="{% static 'researcher/css/style.css' %}">
+      <link rel="stylesheet" href="{% static 'researcher/css/style_xs.css' %}">
   </head>
   <body>
   {% block dialog%}{% endblock %}
   <div class="main">
     <div class="top-bar">
-      <div class="top-msg">
-        <span class="fas fa-envelope fa-lg"></span>
-      </div>
       <img src="{% static 'researcher/img/logoName.png' %}" alt="chamranTeam">
       <div class="dropdown">
         <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
           <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="dropdown-img profile" height="45px">
         </button>
         <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
-          <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری</a></li>
-          <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور</a></li>
+          <li><a href="{% url 'industry:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
+          <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
           <li class="divider"></li>
-          <li><a href="{% url 'chamran:logout' %}">خروج</a></li>
+          <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
         </ul>
       </div>
     </div>
