--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>{% block title %}{% endblock %}</title>
-      {% load static %}
+    <title>{% block title %}{% endblock %}</title>
+    {% load static %}
     <link rel="icon" href="{% static 'researcher/img/logo.ico' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
-      {% block header %}{% endblock %}
-      <link rel="stylesheet" href="{% static 'researcher/css/style.css' %}">
-  </head>
-  <body>
-  {% block dialog%}{% endblock %}
-  <div class="main  {% if request.user.researcheruser.status.status == 'signed_up' %} blur-div {% endif %}">
+    {% block header %}{% endblock %}
+    <link rel="stylesheet" href="{% static 'researcher/css/style.css' %}">
+</head>
+<body>
+{% block dialog %}{% endblock %}
+<div class="main  {% if request.user.researcheruser.status.status == 'signed_up' %} blur-div {% endif %}">
     <div class="top-bar">
-      <div class="top-msg">
-        <span class="fas fa-envelope fa-lg"></span>
-      </div>
-      <img src="{% static 'researcher/img/logoName.png' %}" alt="chamranTeam">
-      <div class="dropdown">
-        <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
-          <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="dropdown-img profile" height="45px">
-        </button>
-        <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
-          <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری</a></li>
-          <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور</a></li>
-          <li class="divider"></li>
-          <li><a href="{% url 'chamran:logout' %}">خروج</a></li>
-        </ul>
-      </div>
+        <div class="top-msg">
+            <span class="fas fa-envelope fa-lg"></span>
+        </div>
+        <img src="{% static 'researcher/img/logoName.png' %}" alt="chamranTeam">
+        <div class="dropdown">
+            <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
+                <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="dropdown-img profile"
+                     height="45px">
+            </button>
+            <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
+                <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری</a></li>
+                <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور</a></li>
+                <li class="divider"></li>
+                <li><a href="{% url 'chamran:logout' %}">خروج</a></li>
+            </ul>
+        </div>
     </div>
     <div class="content">
         <div class="container">
@@ -38,71 +40,72 @@
         </div>
     </div>
     <div class="side-bar">
-      <div class="topMargin"></div>
-      <div class="researcher-icon"></div>
-      <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
-      <h5>{% block name %}{% endblock %}</h5>
-      <h6>پژوهشگر</h6>
-      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0" aria-valuemax="100" style="width: 70px">
-          <span class="sr-only">{{ score|default:0 }}% completed</span>
+        <div class="topMargin"></div>
+        <div class="researcher-icon"></div>
+        <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
+        <h5>{% block name %}{% endblock %}</h5>
+        <h6>پژوهشگر</h6>
+        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"
+                 aria-valuemax="100" style="width: 70px">
+                <span class="sr-only">{{ score|default:0 }}% completed</span>
+            </div>
         </div>
-      </div>
-      <div class="hr"></div>
-      <ul class="list-group">
-        {% url "index" as index_url %}
-        <li class="list-group-item text-right {% if request.get_full_path == index_url %}active{% endif %}">
-          <a href="{{ index_url }}">
-            <div>
-              <span>پروژه ها</span>
-              <span class="fas fa-list-ul"></span>
-            </div>
-          </a>
-        </li>
-        {% url 'researcher:messages' as messages_url %}
-        <li class="list-group-item text-right {% if messages_url == request.get_full_path %}active{% endif %}">
-          <a href="{{ messages_url }}">
-            <div>
-              <span>پیام ها</span>
-              <span class="fas fa-envelope"></span>
-            </div>
-          </a>
-        </li>
-{#      TODO#}
-        <li class="list-group-item text-right">
-          <a href="#">
-            <div>
-                <span>تکنیک ها</span>
-                <span class="fas fa-file-medical"></span>
-            </div>
-          </a>
-        </li>
-        <li class="list-group-item text-right">
-          <a href="#">
-            <div>
-                <span>سوالات پژوهشی</span>
-                <span class="fas fa-question"></span>
-            </div>
-          </a>
-        </li>
-        {% url 'userInfo' as userInfo_url %}
-        <li class="list-group-item text-right {% if request.get_full_path == userInfo_url %}active{% endif %}">
-          <a href="{{ userInfo_url }}">
-            <div>
-              <span>تنظیمات کاربری</span>
-              <span class="fas fa-cog"></span>
-            </div>
-          </a>
-        </li>
-      </ul>
+        <div class="hr"></div>
+        <ul class="list-group">
+            {% url "index" as index_url %}
+            <li class="list-group-item text-right {% if request.get_full_path == index_url %}active{% endif %}">
+                <a href="{{ index_url }}">
+                    <div>
+                        <span>پروژه ها</span>
+                        <span class="fas fa-list-ul"></span>
+                    </div>
+                </a>
+            </li>
+            {% url 'researcher:messages' as messages_url %}
+            <li class="list-group-item text-right {% if messages_url == request.get_full_path %}active{% endif %}">
+                <a href="{{ messages_url }}">
+                    <div>
+                        <span>پیام ها</span>
+                        <span class="fas fa-envelope"></span>
+                    </div>
+                </a>
+            </li>
+            {#      TODO#}
+            <li class="list-group-item text-right">
+                <a href="#">
+                    <div>
+                        <span>تکنیک ها</span>
+                        <span class="fas fa-file-medical"></span>
+                    </div>
+                </a>
+            </li>
+            <li class="list-group-item text-right">
+                <a href="#">
+                    <div>
+                        <span>سوالات پژوهشی</span>
+                        <span class="fas fa-question"></span>
+                    </div>
+                </a>
+            </li>
+            {% url 'userInfo' as userInfo_url %}
+            <li class="list-group-item text-right {% if request.get_full_path == userInfo_url %}active{% endif %}">
+                <a href="{{ userInfo_url }}">
+                    <div>
+                        <span>تنظیمات کاربری</span>
+                        <span class="fas fa-cog"></span>
+                    </div>
+                </a>
+            </li>
+        </ul>
     </div>
-  </div>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  {% block script %}{% endblock %}
-  <script type="text/javascript" src="{% static 'researcher/js/script-functions.js' %}"></script>
-  <script type="text/javascript" src="{% static 'researcher/js/script.js' %}"></script>
-  </body>
+</div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+{% block script %}{% endblock %}
+<script type="text/javascript" src="{% static 'researcher/js/script-functions.js' %}"></script>
+<script type="text/javascript" src="{% static 'researcher/js/script.js' %}"></script>
+</body>
 </html>
